--- a/index.html
+++ b/index.html
@@ -93,11 +93,11 @@
                             <div class="sub_wrap sub_wrap1">
                                 <div class="sub sub1">
                                     <div class="sunrise sub_items">
-                                        <img src="images/sunrise_black.png" alt="sunrise">
+                                        <img src="images/sunrise.png" alt="sunrise">
                                         <p></p>
                                     </div>
                                     <div class="sunset sub_items">
-                                        <img src="images/sunset_black.png" alt="sunset">
+                                        <img src="images/sunset.png" alt="sunset">
                                         <p></p>
                                     </div>
                                 </div>
@@ -134,7 +134,7 @@
                                     </div>
                                     <div class="wind sub_items">
                                         <img src="images/wind_black.png" alt="wind_black" class="wind_black">
-                                        <img src="images/wind_white" alt="wind_white" class="wind_white">
+                                        <img src="images/wind_white.png" alt="wind_white" class="wind_white">
                                         <p></p>
                                     </div>
                                 </div>
